Pagina Gestão de Paciente

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -6,7 +6,10 @@
         <title>Sistema de Gesãto Hospitalar</title>
     </h:head>
     <h:body>
-        Hello from Facelets
+        <h:form>
+            <h:link outcome="paciente" value="Pacientes" />
+        </h:form>
+        
     </h:body>
 </html>
 
