Criacao da pagina Gestao funcionario - Parte I

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -7,7 +7,10 @@
     </h:head>
     <h:body>
         <h:form>
+            <h:panelGrid columns="1">
             <h:link outcome="paciente" value="Pacientes" />
+              <h:link outcome="staff/gestao-funconario" value="Gestao funconario" />
+            </h:panelGrid>
         </h:form>
         
     </h:body>
