--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -9,8 +9,9 @@
         <h:form>
             <h:panelGrid columns="1">
             <h:link outcome="paciente" value="Pacientes" />
-             <h:link outcome="cama" value="Camas" />
-             <h:link outcome="quarto" value="Quartos" />
+             <h:link outcome="staff/cama" value="Camas" />
+             <h:link outcome="staff/quarto" value="Quartos" />
+             <h:link outcome="staff/internamento" value="Internamentos" />
               <h:link outcome="staff/gestao-funconario" value="Gestao funconario" />
             </h:panelGrid>
         </h:form>
