--- a/src/main/webapp/staff/enfermeiros/index-admin-enfermeiros.xhtml
+++ b/src/main/webapp/staff/enfermeiros/index-admin-enfermeiros.xhtml
@@ -4,7 +4,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:b="http://bootsfaces.net/ui">
     <h:head>
-        <title>Sistema de Gesãto Hospitalar</title>
+        <title>Sistema de Gestão Hospitalar</title>
     </h:head>
     <h:body>
         
