COnstrução da pagina Gestao Funcionario

--- a/src/main/webapp/staff/funcionarios/gestao-funconario.xhtml
+++ b/src/main/webapp/staff/funcionarios/gestao-funconario.xhtml
@@ -12,7 +12,7 @@
         <p:panel header="#{app['novo']}#{msg['funcionario']}">
 
         <h:form>
-
+            <h:messages/>
             <h:panelGrid columns="2">
                 <h:panelGroup>
                     <p:panelGrid columns="1">
@@ -35,7 +35,7 @@
                         <p:outputLabel value="#{msg['sexo']}"/>
                     </p:panelGrid>
                     <p:panelGrid columns="2">
-                        <p:selectOneRadio id="sexo" value="#{funcioarioMB.funcionario.sexoFuncionario}">
+                        <p:selectOneRadio id="sexo" value="#{funcioarioMB.funcionario.sexoFuncionario}" required="true">
                             <f:selectItems value="#{funcioarioMB.opSexos}" />
                         </p:selectOneRadio >
                     </p:panelGrid>
@@ -44,7 +44,7 @@
                     <h:panelGroup>
                         <p:panelGrid columns="1">
                             <p:outputLabel value="#{msg['data-nascimento']}"/>
-                            <p:calendar value="#{funcioarioMB.funcionario.dataNascimento}" pattern="dd/MM/yy"/>
+                            <p:calendar value="#{funcioarioMB.funcionario.dataNascimento}" pattern="dd/MM/yyyy"/>
                         </p:panelGrid>
                     </h:panelGroup>
                 </h:panelGroup>
@@ -102,7 +102,7 @@
                             <p:outputLabel value="#{msg['municipio']}"/>
                             <p:selectOneMenu id="municipio" value="#{funcioarioMB.funcionario.municipio}" converter="municipioConverver">
                                 <f:selectItem itemLabel="#{app['seleccionar']}" itemValue="#{null}" noSelectionOption="true"/>
-                                <f:selectItems value="#{municipioMB.municipios}" />
+                                <f:selectItems value="#{municipioMB.municipios}" var="m" itemValue="#{m}"  itemLabel="#{m.nomeMunicipio}"/>
                             </p:selectOneMenu> 
                         </p:panelGrid>
                     </h:panelGroup>
@@ -111,7 +111,7 @@
 
             </p:fieldset>
             <h:panelGrid columns="2">
-                <h:commandButton value="#{app['guardar']}"/>
+                <h:commandButton value="#{app['guardar']}" action="#{funcioarioMB.insert}"/>
                 <h:commandButton value="#{app['cancelar']}"/>
             </h:panelGrid>
         </h:form>
