--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -94,7 +94,7 @@
                         <b:pillLinks>
                             <b:navLink href="#" value="#{app['gestao-pacientes']}"
                                        icon="globe" iconAlign="right"/>
-                            <b:navLink href="#" value="#{app['gestao-internamentos']}" icon="link"></b:navLink>
+                            <b:navLink href="index-admin-internamentos.jsf" value="#{app['gestao-internamentos']}" icon="link"></b:navLink>
                             <b:navLink href="#" value="#{app['gestao-consultas']}" icon="link"></b:navLink>
                             <b:navLink href="#" value="#{app['gestao-exames']}" icon="link"></b:navLink>
                             
