--- a/src/main/webapp/staff/internamentos/cama.xhtml
+++ b/src/main/webapp/staff/internamentos/cama.xhtml
@@ -5,7 +5,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
     <h:head>
-        <title>Gestão de Camas</title>
+        <title>#{msg['gestao-camas']}</title>
     </h:head>
     <h:body>
        
