--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -100,7 +100,7 @@
                             
                                
                             <b:navLink href="#" value="#{app['gestao-funcionarios']}" icon="link"></b:navLink>
-                            <b:navLink href="#" value="#{app['gestao-enfermeiros']}" icon="link"></b:navLink>
+                            <b:navLink href="staff/enfermeiros/index-admin-enfermeiros.jsf" value="#{app['gestao-enfermeiros']}" icon="link"></b:navLink>
                         </b:pillLinks>
                         <b:messages />
 
