Criação do formulário para inserir os médicos

--- a/src/main/webapp/staff/medicos/gestao-medicos.xhtml
+++ b/src/main/webapp/staff/medicos/gestao-medicos.xhtml
@@ -53,6 +53,7 @@
                             <a class="btn btn-primary btn-lg" style="margin: 8px;" href="/hospitalx/staff/medicos/novo-medico.jsf">#{app['novo-medico']}</a>
                             <a class="btn btn-primary btn-lg" style="margin: 8px;" href="#">#{app['internamentos']}</a>
                             <a class="btn btn-primary btn-lg" style="margin: 8px;" href="#">#{app['receitas']}</a>
+                            <!--a class="btn btn-primary btn-lg" style="margin: 8px;" href="/hospitalx/staff/medicos/registo-medico.jsf"># {app['novo-medico']}</a-->
                         </div>
 
                         <br/>
